--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/styles/swrpgaor.min.css">
-  <link rel="stylesheet" href="/styles/example.css">
+  <link rel="stylesheet" href="/styles/examples.css">
 </head>
 <body ng-app="myApp" ng-cloak>
 <code>
