adding NPC and die result examples

--- a/index.html
+++ b/index.html
@@ -5,10 +5,115 @@
   <link rel="stylesheet" href="/styles/examples.css">
 </head>
 <body ng-app="myApp" ng-cloak>
+
+<p>These documents are a WIP.  Please view the source code for a full list of directives and attributes.</p>
+
+<h2>Dice Values</h2>
+
+<h3>Boost</h3>
 <code>
     &lt;boost&gt;&lt;/boost&gt;
 </code>
+<h5>Result</h5>
 <boost></boost>
+
+<h3>Setback</h3>
+<code>
+    &lt;setback&gt;&lt;/setback&gt;
+</code>
+<h5>Result</h5>
+<setback></setback>
+
+<h3>Ability</h3>
+<code>
+    &lt;ability&gt;&lt;/ability&gt;
+</code>
+<h5>Result</h5>
+<ability></ability>
+
+<h3>Difficulty</h3>
+<code>
+    &lt;difficulty&gt;&lt;/difficulty&gt;
+</code>
+<h5>Result</h5>
+<difficulty></difficulty>
+
+<h3>Proficiency</h3>
+<code>
+    &lt;proficiency&gt;&lt;/proficiency&gt;
+</code>
+<h5>Result</h5>
+<proficiency></proficiency>
+
+<h3>Challenge</h3>
+<code>
+    &lt;challenge&gt;&lt;/challenge&gt;
+</code>
+<h5>Result</h5>
+<challenge></challenge>
+
+
+<h3>Success</h3>
+<code>
+    &lt;success&gt;&lt;/success&gt;
+</code>
+<h5>Result</h5>
+<success></success>
+
+
+<h3>Failure</h3>
+<code>
+    &lt;failure&gt;&lt;/failure&gt;
+</code>
+<h5>Result</h5>
+<failure></failure>
+
+
+<h3>advantage</h3>
+<code>
+    &lt;advantage&gt;&lt;/advantage&gt;
+</code>
+<h5>Result</h5>
+<advantage></advantage>
+
+
+<h3>threat</h3>
+<code>
+    &lt;threat&gt;&lt;/threat&gt;
+</code>
+<h5>Result</h5>
+<threat></threat>
+
+<h3>triumph</h3>
+<code>
+    &lt;triumph&gt;&lt;/triumph&gt;
+</code>
+<h5>Result</h5>
+<triumph></triumph>
+
+<h3>despair</h3>
+<code>
+    &lt;despair&gt;&lt;/despair&gt;
+</code>
+<h5>Result</h5>
+<despair></despair>
+
+
+
+<h2>NPCs</h2>
+<code>
+    &lt;npc name="Example NPC" rank="nemesis" brawn="3" agility="2" intelligence="2" willpower="2" cunning="3" presence="4" soak="3" wounds="15" strain="10"&gt;
+        &lt;skills athletics="2" ranged-light="4" /&gt;
+        &lt;abilities&gt;Add &lt;boost&gt;&lt;/boost&gt; when making a Persuasion Check&lt;/abilities&gt;
+        &lt;weapon name="frag grenades" skill="Ranged (Light)" damage="2" pierce="5" blast="9" critical="5" range="short" ammo="1" quantity="3"&gt;&lt;/weapon&gt;
+    &lt;/npc&gt;
+</code>
+<h5>Result</h5>
+<npc name="Example NPC" rank="nemesis" brawn="3" agility="2" intelligence="2" willpower="2" cunning="3" presence="4" soak="3" wounds="15" strain="10">
+    <skills athletics="2" ranged-light="4" />
+    <abilities>Add <boost></boost> when making a Persuasion Check</abilities>
+    <weapon name="frag grenades" skill="Ranged (Light)" damage="2" pierce="5" blast="9" critical="5" range="short" ammo="1" quantity="3"></weapon>
+</npc>
 
 
 </body>
