--- a/index.html
+++ b/index.html
@@ -122,12 +122,16 @@
 <code>
     &lt;narrative&gt;<br />
         &lt;p&gt;<br />
+            The holo-transmission zooms in on the Emperor's throne, where he is about to speak.  The lighting is dark, and to each entrance of his spire a crimson Royal Guard stands watch.
+        &lt;/p&gt;<br />
+        &lt;p&gt;<br />
             "The Empire is on the verge of success.  Soon peace and order will be restored throughout the galaxy.  Even now our capable forces lead by Darth Vader are striking back at the rebel insurgents."
         &lt;/p&gt;<br />
     &lt;/narrative&gt;<br />
 </code>
 <h5>Result</h5>
 <narrative>
+    <p>The holo-transmission zooms in on the Emperor's throne, where he is about to speak.  The lighting is dark, and to each entrance of his spire a crimson Royal Guard stands watch.</p>
     <p>"The Empire is on the verge of success.  Soon peace and order will be restored throughout the galaxy.  Even now our capable forces lead by Darth Vader are striking back at the rebel insurgents."</p>
 </narrative>
 
@@ -136,17 +140,17 @@
 <code>
     &lt;blackbox title="how dice work"&gt;<br />
         &lt;p&gt;<br />
-            Success &lt;success&gt;&lt;/success&gt; rolls mean your character successfully completed a task.
+            Success &lt;success&gt;&lt;/success&gt; rolls mean your character successfully completed a task.  They are a very important mechanic and need to be tracked.  They're cancelled by Failure results, but that's okay because you'll roll more successes than failures if your character doesn't try anything too silly!
         &lt;/p&gt;<br />
         &lt;p&gt;<br />
-            Failure &lt;failure&gt;&lt;/failure&gt; rolls mean your character failed at completing a task.
+            Failure &lt;failure&gt;&lt;/failure&gt; rolls mean your character failed at completing a task.  If your character rolled too many of these, you probably tried a task that you shouldn't have.  That's too bad, don't do that next time!
         &lt;/p&gt;<br />
     &lt;/blackbox&gt;<br />
 </code>
 <h5>Result</h5>
 <blackbox  title="how dice work">
-    <p>Success <success></success> rolls mean your character successfully completed a task.</p>
-    <p>Failure <failure></failure> rolls mean your character failed at completing a task.</p>
+    <p>Success <success></success> rolls mean your character successfully completed a task.  They are a very important mechanic and need to be tracked.  They're cancelled by Failure results, but that's okay because you'll roll more successes than failures if your character doesn't try anything too silly!</p>
+    <p>Failure <failure></failure> rolls mean your character failed at completing a task.  If your character rolled too many of these, you probably tried a task that you shouldn't have.  That's too bad, don't do that next time!</p>
 </blackbox>
 
 
