cleaning up some typography

--- a/index.html
+++ b/index.html
@@ -8,118 +8,65 @@
 
 <p>These documents are a WIP.  Please view the source code for a full list of directives and attributes.</p>
 
+<h2>Typography</h2>
+<pre>
+   <code>
+      &lt;b&gt;Bold Text&lt;/b&gt;
+      &lt;i&gt;Italic Text&lt;/i&gt;
+      &lt;h5&gt;Heading 5&lt;/h5&gt;
+      &lt;h4&gt;Heading 4&lt;/h4&gt;
+      &lt;h3&gt;Heading 3&lt;/h3&gt;
+      &lt;h2&gt;Heading 2&lt;/h2&gt;
+      &lt;h1&gt;Heading 1&lt;/h1&gt;
+   </code>
+</pre>
+
+<b>Bold Text</b>
+<i>Italic Text</i>
+<h5>Heading 5</h5>
+<h4>Heading 4</h4>
+<h3>Heading 3</h3>
+<h2>Heading 2</h2>
+<h1>Heading 1</h1>
+
 <h2>Dice Values</h2>
 
-<h3>Boost</h3>
-<code>
-    &lt;boost&gt;&lt;/boost&gt;
-</code>
-<h5>Result</h5>
-<boost></boost>
-
-<h3>Setback</h3>
-<code>
-    &lt;setback&gt;&lt;/setback&gt;
-</code>
-<h5>Result</h5>
-<setback></setback>
-
-<h3>Ability</h3>
-<code>
-    &lt;ability&gt;&lt;/ability&gt;
-</code>
-<h5>Result</h5>
-<ability></ability>
-
-<h3>Difficulty</h3>
-<code>
-    &lt;difficulty&gt;&lt;/difficulty&gt;
-</code>
-<h5>Result</h5>
-<difficulty></difficulty>
-
-<h3>Proficiency</h3>
-<code>
-    &lt;proficiency&gt;&lt;/proficiency&gt;
-</code>
-<h5>Result</h5>
-<proficiency></proficiency>
-
-<h3>Challenge</h3>
-<code>
-    &lt;challenge&gt;&lt;/challenge&gt;
-</code>
-<h5>Result</h5>
-<challenge></challenge>
-
-<h3>force/destiny</h3>
-<code>
-    &lt;force&gt;&lt;/force&gt;
-</code>
-<h5>Result</h5>
-<force></force>
-
-<h3>dark side pip</h3>
-<code>
-    &lt;dark-side&gt;&lt;/dark-side&gt;
-</code>
-<h5>Result</h5>
-<dark-side></dark-side>
-
-<h3>light side pip</h3>
-<code>
-    &lt;light-side&gt;&lt;/light-side&gt;
-</code>
-<h5>Result</h5>
-<light-side></light-side>
+<pre>
+   <code>
+   Boost Die: &lt;boost&gt;&lt;/boost&gt;
+   Setback Die: &lt;setback&gt;&lt;/setback&gt;
+   Ability Die: &lt;ability&gt;&lt;/ability&gt;
+   Difficulty Die: &lt;difficulty&gt;&lt;/difficulty&gt;
+   Proficiency Die: &lt;proficiency&gt;&lt;/proficiency&gt;
+   Challenge Die: &lt;challenge&gt;&lt;/challenge&gt;
+   Force Die: &lt;force&gt;&lt;/force&gt;
+   Success Result: &lt;success&gt;&lt;/success&gt;
+   Failure Result: &lt;failure&gt;&lt;/failure&gt;
+   Advantage Result: &lt;advantage&gt;&lt;/advantage&gt;
+   Threat Result: &lt;threat&gt;&lt;/threat&gt;
+   Triumph Result: &lt;triumph&gt;&lt;/triumph&gt;
+   Despair Result: &lt;despair&gt;&lt;/despair&gt;
+   Light Side Result: &lt;light-side&gt;&lt;/light-side&gt;
+   Dark Side Result: &lt;dark-side&gt;&lt;/dark-side&gt;
+   </code>
+</pre>
 
 
-<h3>Success</h3>
-<code>
-    &lt;success&gt;&lt;/success&gt;
-</code>
-<h5>Result</h5>
-<success></success>
-
-
-<h3>Failure</h3>
-<code>
-    &lt;failure&gt;&lt;/failure&gt;
-</code>
-<h5>Result</h5>
-<failure></failure>
-
-
-<h3>advantage</h3>
-<code>
-    &lt;advantage&gt;&lt;/advantage&gt;
-</code>
-<h5>Result</h5>
-<advantage></advantage>
-
-
-<h3>threat</h3>
-<code>
-    &lt;threat&gt;&lt;/threat&gt;
-</code>
-<h5>Result</h5>
-<threat></threat>
-
-<h3>triumph</h3>
-<code>
-    &lt;triumph&gt;&lt;/triumph&gt;
-</code>
-<h5>Result</h5>
-<triumph></triumph>
-
-<h3>despair</h3>
-<code>
-    &lt;despair&gt;&lt;/despair&gt;
-</code>
-<h5>Result</h5>
-<despair></despair>
-
-
+Boost Die: <boost></boost>
+Setback Die: <setback></setback>
+Ability Die: <ability></ability>
+Difficulty Die: <difficulty></difficulty>
+Proficiency Die: <proficiency></proficiency>
+Challenge Die: <challenge></challenge>
+Force Die: <force></force>
+Success Result: <success></success>
+Failure Result: <failure></failure>
+Advantage Result: <advantage></advantage>
+Threat Result: <threat></threat>
+Triumph Result: <triumph></triumph>
+Despair Result: <despair></despair>
+Light Side Result: <light-side></light-side>
+Dark Side Result: <dark-side></dark-side>
 
 <h2>NPCs</h2>
 <pre>
