adding some line breaks

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    </code>
 </pre>
 
-<b>Bold Text</b>
+<b>Bold Text</b><br />
 <i>Italic Text</i>
 <h5>Heading 5</h5>
 <h4>Heading 4</h4>
@@ -52,21 +52,21 @@
 </pre>
 
 
-Boost Die: <boost></boost>
-Setback Die: <setback></setback>
-Ability Die: <ability></ability>
-Difficulty Die: <difficulty></difficulty>
-Proficiency Die: <proficiency></proficiency>
-Challenge Die: <challenge></challenge>
-Force Die: <force></force>
-Success Result: <success></success>
-Failure Result: <failure></failure>
-Advantage Result: <advantage></advantage>
-Threat Result: <threat></threat>
-Triumph Result: <triumph></triumph>
-Despair Result: <despair></despair>
-Light Side Result: <light-side></light-side>
-Dark Side Result: <dark-side></dark-side>
+Boost Die: <boost></boost><br />
+Setback Die: <setback></setback><br />
+Ability Die: <ability></ability><br />
+Difficulty Die: <difficulty></difficulty><br />
+Proficiency Die: <proficiency></proficiency><br />
+Challenge Die: <challenge></challenge><br />
+Force Die: <force></force><br />
+Success Result: <success></success><br />
+Failure Result: <failure></failure><br />
+Advantage Result: <advantage></advantage><br />
+Threat Result: <threat></threat><br />
+Triumph Result: <triumph></triumph><br />
+Despair Result: <despair></despair><br />
+Light Side Result: <light-side></light-side><br />
+Dark Side Result: <dark-side></dark-side><br />
 
 <h2>NPCs</h2>
 <pre>
