--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <code>
       &lt;b&gt;Bold Text&lt;/b&gt;
       &lt;i&gt;Italic Text&lt;/i&gt;
+      &lt;h6&gt;Heading 6&lt;/h6&gt;
       &lt;h5&gt;Heading 5&lt;/h5&gt;
       &lt;h4&gt;Heading 4&lt;/h4&gt;
       &lt;h3&gt;Heading 3&lt;/h3&gt;
@@ -23,6 +24,7 @@
 
 <b>Bold Text</b><br />
 <i>Italic Text</i>
+<h6>Heading 6</h6>
 <h5>Heading 5</h5>
 <h4>Heading 4</h4>
 <h3>Heading 3</h3>
