--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <p>These documents are a WIP.  Please view the source code for a full list of directives and attributes.</p>
 
 <h2>Setup</h2>
-<p>You'll need to reference both swaor.min.js and swaor.min.css in your project.  They must be refereneced <i>after</i> AngularJS core is referenced.</p>
-<p>Finally, you'll need to reference the module in your main angularJS app, for example: <code>var app = angular.module("myApp", ["swaor"]);</code></p>
+<p>The SWRPG AngularJS Directives required AngularJS to run. Simply reference both swaor.min.js and swaor.min.css in your project.  They must be refereneced <i>after</i> AngularJS core is referenced.
+Finally, you'll need to reference the module in your main angularJS app, for example: <code>var app = angular.module("myApp", ["swaor"]);</code></p>
 
 <p>Full Example</p>
 <pre>
