--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
 </head>
 <body ng-app="myApp" ng-cloak>
 
+<h4>Table of Contents
+<ul>
+   <li><a href="#setup">Setup</a></li>
+   <li><a href="#typography">Typography</a></li>
+   <li><a href="#statbars">Stat Bars</a></li>
+   <li><a href="#wrappers">Containers</a></li>
+</ul>
+
 <p>These documents are a WIP.  Please view the source code for a full list of directives and attributes.</p>
 
-<h2>Setup</h2>
+<h2 id="setup">Setup</h2>
 <p>The SWRPG AngularJS Directives required AngularJS to run. Simply reference both swaor.min.js and swaor.min.css in your project.  They must be refereneced <i>after</i> AngularJS core is referenced.
 Finally, you'll need to reference the module in your main angularJS app, for example: <code>var app = angular.module("myApp", ["swaor"]);</code></p>
 
-<p>Full Example</p>
+<h5>Quick-start Example</h5>
 <pre>
    <code>
       &lt;!DOCTYPE html&gt;
@@ -29,14 +37,15 @@ Finally, you'll need to reference the module in your main angularJS app, for exa
          &lt;script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"&gt;&lt;/script&gt;
          &lt;script src="/scripts/swrpgaor.min.js"&gt;&lt;/script&gt;
          &lt;script&gt;
-         var app = angular.module("myApp", ['swaor'])
+         var app = angular.module("myApp", ['swaor']);
          &lt;/script&gt;
       &lt;/html&gt;
    </code>
 </pre>
 
 
-<h2>Typography</h2>
+<h2 id="typography">Typography</h2>
+<h3>Basic typography</h3>
 <pre>
    <code>
       &lt;b&gt;Bold Text&lt;/b&gt;
@@ -57,7 +66,7 @@ Finally, you'll need to reference the module in your main angularJS app, for exa
 <h2>Heading 2</h2>
 <h1>Heading 1</h1>
 
-<h2>Dice Values</h2>
+<h3>Dice Values</h3>
 
 <pre>
    <code>
@@ -96,7 +105,27 @@ Despair Result: <despair></despair><br />
 Light Side Result: <light-side></light-side><br />
 Dark Side Result: <dark-side></dark-side><br />
 
-<h2>NPCs</h2>
+<p>You can also specify any dice result using the <code style="display: inline">&lt;die type="boost"&gt;&lt;/die&gt;</code> directive by passing the name of the symbol as the <b>Type</b> attribute.</p>
+
+<h3>Skill checks</h3>
+<pre>
+   <code>
+      Make an &lt;check skill="piloting" dif="2"&gt;&lt;/check&gt; to navigate the asteroid field.
+      Make a &lt;check skill="athletics" dif="2" chg="1"&gt;&lt;/check&gt; to jump across the building in the rain.
+      Make a &lt;check skill="Opposed Charm vs Discipline" dif="2" chg="1"&gt;&lt;/check&gt; to talk the Imperial Officer into giving away the codes.
+   </code>
+</pre>
+
+Make an <check skill="piloting" dif="2"></check> to navigate the asteroid field.<br />
+Make a <check skill="athletics" dif="2" chg="1"></check> to jump across the building in the rain.<br />
+Make a <check skill="Opposed Charm vs Discipline" dif="2" chg="1"></check> to talk the Imperial Officer into giving away the codes.<br />
+
+<h2 id="statbars">Stat Bars</h2>
+<h3>NPCs</h3>
+<p>NPC statlines can be quickly created using the <code style="display: inline">&lt;npc&gt;&lt;/npc&gt;</code> directive.  Simply pass a values for each characteristic as attributes and a name.  It's advisable to also pass a rank, as minion dice pools should not be calculated until a number of minions is determined.</p>
+<p>Under the NPC directive you can add the <code style="display: inline">&lt;skills&gt;&lt;/skills&gt;</code> directive, passing rank counts for any relevant skills the NPC has.  These will display dice pools on the rendered view.</p>
+<p>You can further add abilities text to your NPC with the  <code style="display: inline">&lt;abilities&gt;&lt;/abilities&gt;</code> directive.  Any text between the tags will be added to the abilities section on your NPC</p>
+<p>Finally, to add weapons to your NPC, add a <code style="display: inline">&lt;weapons&gt;&lt;/weapons&gt;</code> directive for each weapon in their inventory.  You can pass statistical values as attributes for different abilities, however do note <b>critical, damage, skill, and name are all required attributes</b></p>
 <pre>
 <code>
     &lt;npc name="Example NPC" rank="nemesis" brawn="3" agility="2" intelligence="2" willpower="2" cunning="3" presence="4" soak="3" wounds="15" strain="10"&gt;<br />
@@ -106,15 +135,30 @@ Dark Side Result: <dark-side></dark-side><br />
     &lt;/npc&gt;
 </code>
 </pre>
-<h5>Result</h5>
 <npc name="Example NPC" rank="nemesis" brawn="3" agility="2" intelligence="2" willpower="2" cunning="3" presence="4" soak="3" wounds="15" strain="10">
     <skills athletics="2" ranged-light="4" />
     <abilities>Add <boost></boost> when making a Persuasion Check</abilities>
     <weapon name="frag grenades" skill="Ranged (Light)" damage="2" pierce="5" blast="9" critical="5" range="short" ammo="1" quantity="3"></weapon>
 </npc>
 
+<h3>Vehicles</h3>
+<pre>
+   <code>
+      &lt;vehicle name="Kihraxz Light Starfighter" speed="4" silhouette="3" fore="1" aft="0" armor="2" hull="10" system="6" type="Starfighter" ship="Kihraxz" maker="TransGalMeg, Inc" hyperdrive="Primary: Class 3, Backup: None" navicomputer="true" encum="7" consumables="One day" price="65,000" rarity="6" hardpoints="5"&gt;
+          &lt;starship-weapon damage="4" critical="4" name="Twin wing-mounted light blaster cannons" arc="forward" linked="1"&gt;&lt;/starship-weapon&gt;
+          &lt;starship-weapon damage="6" critical="3" blast="4" breach="4" guided="3" ammo="2" slow-firing="1" name="Forward mounted concussion missile launcher" arc="forward" linked="1"&gt;&lt;/starship-weapon&gt;
+          &lt;starship-weapon damage="5" critical="4" name="Forward mounted light ion cannon" arc="forward" ion="true"&gt;&lt;/starship-weapon&gt;
+      &lt;/vehicle&gt;
+   </code>
+</pre>
 
-<h2>containers</h2>
+<vehicle name="Kihraxz Light Starfighter" speed="4" silhouette="3" fore="1" aft="0" armor="2" hull="10" system="6" type="Starfighter" ship="Kihraxz" maker="TransGalMeg, Inc" hyperdrive="Primary: Class 3, Backup: None" navicomputer="true" encum="7" consumables="One day" price="65,000" rarity="6" hardpoints="5">
+    <starship-weapon damage="4" critical="4" name="Twin wing-mounted light blaster cannons" arc="forward" linked="1"></starship-weapon>
+    <starship-weapon damage="6" critical="3" blast="4" breach="4" guided="3" ammo="2" slow-firing="1" name="Forward mounted concussion missile launcher" arc="forward" linked="1"></starship-weapon>
+    <starship-weapon damage="5" critical="4" name="Forward mounted light ion cannon" arc="forward" ion="true"></starship-weapon>
+</vehicle>
+
+<h2 id="wrappers">containers</h2>
 
 <h3>narrative text</h3>
 <code>
@@ -127,7 +171,6 @@ Dark Side Result: <dark-side></dark-side><br />
         &lt;/p&gt;<br />
     &lt;/narrative&gt;<br />
 </code>
-<h5>Result</h5>
 <narrative>
     <p>The holo-transmission zooms in on the Emperor's throne, where he is about to speak.  The lighting is dark, and to each entrance of his spire a crimson Royal Guard stands watch.</p>
     <p>"The Empire is on the verge of success.  Soon peace and order will be restored throughout the galaxy.  Even now our capable forces lead by Darth Vader are striking back at the rebel insurgents."</p>
@@ -145,13 +188,13 @@ Dark Side Result: <dark-side></dark-side><br />
         &lt;/p&gt;<br />
     &lt;/blackbox&gt;<br />
 </code>
-<h5>Result</h5>
 <blackbox  title="how dice work">
     <p>Success <success></success> rolls mean your character successfully completed a task.  They are a very important mechanic and need to be tracked.  They're cancelled by Failure results, but that's okay because you'll roll more successes than failures if your character doesn't try anything too silly!</p>
     <p>Failure <failure></failure> rolls mean your character failed at completing a task.  If your character rolled too many of these, you probably tried a task that you shouldn't have.  That's too bad, don't do that next time!</p>
 </blackbox>
 
 <h3>Tables</h3>
+<p>Tables add a nice flare to your documents, letting you organize suggestions, results, or other information in a handy and visually stimulating way.  It is highly suggested that you use the <a href="https://github.com/awerlang/angular-responsive-tables">Angular Responsive Table</a> plugin to make your tables pivot on mobile views such as phones.</p>
 <pre>
    <code>
       &lt;h5&gt;Table 1 - 1: Event Seeds&lt;/h5&gt;
