--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body ng-app="myApp" ng-cloak>
 
-<h4>Table of Contents
+<h4>Table of Contents</h4>
 <ul>
    <li><a href="#setup">Setup</a></li>
    <li><a href="#typography">Typography</a></li>
@@ -105,7 +105,7 @@ Despair Result: <despair></despair><br />
 Light Side Result: <light-side></light-side><br />
 Dark Side Result: <dark-side></dark-side><br />
 
-<p>You can also specify any dice result using the <code style="display: inline">&lt;die type="boost"&gt;&lt;/die&gt;</code> directive by passing the name of the symbol as the <b>Type</b> attribute.</p>
+<p>You can also specify any dice result using the <code class="inline">&lt;die type="boost"&gt;&lt;/die&gt;</code> directive by passing the name of the symbol as the <b>Type</b> attribute.</p>
 
 <h3>Skill checks</h3>
 <pre>
@@ -122,10 +122,10 @@ Make a <check skill="Opposed Charm vs Discipline" dif="2" chg="1"></check> to ta
 
 <h2 id="statbars">Stat Bars</h2>
 <h3>NPCs</h3>
-<p>NPC statlines can be quickly created using the <code style="display: inline">&lt;npc&gt;&lt;/npc&gt;</code> directive.  Simply pass a values for each characteristic as attributes and a name.  It's advisable to also pass a rank, as minion dice pools should not be calculated until a number of minions is determined.</p>
-<p>Under the NPC directive you can add the <code style="display: inline">&lt;skills&gt;&lt;/skills&gt;</code> directive, passing rank counts for any relevant skills the NPC has.  These will display dice pools on the rendered view.</p>
-<p>You can further add abilities text to your NPC with the  <code style="display: inline">&lt;abilities&gt;&lt;/abilities&gt;</code> directive.  Any text between the tags will be added to the abilities section on your NPC</p>
-<p>Finally, to add weapons to your NPC, add a <code style="display: inline">&lt;weapons&gt;&lt;/weapons&gt;</code> directive for each weapon in their inventory.  You can pass statistical values as attributes for different abilities, however do note <b>critical, damage, skill, and name are all required attributes</b></p>
+<p>NPC statlines can be quickly created using the <code class="inline">&lt;npc&gt;&lt;/npc&gt;</code> directive.  Simply pass a values for each characteristic as attributes and a name.  It's advisable to also pass a rank, as minion dice pools should not be calculated until a number of minions is determined.</p>
+<p>Under the NPC directive you can add the <code class="inline">&lt;skills&gt;&lt;/skills&gt;</code> directive, passing rank counts for any relevant skills the NPC has.  These will display dice pools on the rendered view.</p>
+<p>You can further add abilities text to your NPC with the  <code class="inline">&lt;abilities&gt;&lt;/abilities&gt;</code> directive.  Any text between the tags will be added to the abilities section on your NPC</p>
+<p>Finally, to add weapons to your NPC, add a <code class="inline">&lt;weapons&gt;&lt;/weapons&gt;</code> directive for each weapon in their inventory.  You can pass statistical values as attributes for different abilities, however do note <b>critical, damage, skill, and name are all required attributes</b></p>
 <pre>
 <code>
     &lt;npc name="Example NPC" rank="nemesis" brawn="3" agility="2" intelligence="2" willpower="2" cunning="3" presence="4" soak="3" wounds="15" strain="10"&gt;<br />
@@ -144,7 +144,7 @@ Make a <check skill="Opposed Charm vs Discipline" dif="2" chg="1"></check> to ta
 <h3>Vehicles</h3>
 <pre>
    <code>
-      &lt;vehicle name="Kihraxz Light Starfighter" speed="4" silhouette="3" fore="1" aft="0" armor="2" hull="10" system="6" type="Starfighter" ship="Kihraxz" maker="TransGalMeg, Inc" hyperdrive="Primary: Class 3, Backup: None" navicomputer="true" encum="7" consumables="One day" price="65,000" rarity="6" hardpoints="5"&gt;
+      &lt;vehicle name="Example Light Starfighter" speed="5" silhouette="3" fore="1" aft="0" armor="1" hull="10" system="6" type="Starfighter" ship="ExampleShip" maker="Spaceships, Inc" hyperdrive="Primary: Class 3, Backup: None" navicomputer="true" encum="7" consumables="One day" price="65,000" rarity="6" hardpoints="5"&gt;
           &lt;starship-weapon damage="4" critical="4" name="Twin wing-mounted light blaster cannons" arc="forward" linked="1"&gt;&lt;/starship-weapon&gt;
           &lt;starship-weapon damage="6" critical="3" blast="4" breach="4" guided="3" ammo="2" slow-firing="1" name="Forward mounted concussion missile launcher" arc="forward" linked="1"&gt;&lt;/starship-weapon&gt;
           &lt;starship-weapon damage="5" critical="4" name="Forward mounted light ion cannon" arc="forward" ion="true"&gt;&lt;/starship-weapon&gt;
@@ -152,7 +152,7 @@ Make a <check skill="Opposed Charm vs Discipline" dif="2" chg="1"></check> to ta
    </code>
 </pre>
 
-<vehicle name="Kihraxz Light Starfighter" speed="4" silhouette="3" fore="1" aft="0" armor="2" hull="10" system="6" type="Starfighter" ship="Kihraxz" maker="TransGalMeg, Inc" hyperdrive="Primary: Class 3, Backup: None" navicomputer="true" encum="7" consumables="One day" price="65,000" rarity="6" hardpoints="5">
+<vehicle name="Example Light Starfighter" speed="5" silhouette="3" fore="1" aft="0" armor="1" hull="10" system="6" type="Starfighter" ship="ExampleShip" maker="Spaceships, Inc" hyperdrive="Primary: Class 3, Backup: None" navicomputer="true" encum="7" consumables="One day" price="65,000" rarity="6" hardpoints="5">
     <starship-weapon damage="4" critical="4" name="Twin wing-mounted light blaster cannons" arc="forward" linked="1"></starship-weapon>
     <starship-weapon damage="6" critical="3" blast="4" breach="4" guided="3" ammo="2" slow-firing="1" name="Forward mounted concussion missile launcher" arc="forward" linked="1"></starship-weapon>
     <starship-weapon damage="5" critical="4" name="Forward mounted light ion cannon" arc="forward" ion="true"></starship-weapon>
